modified:   BASICS/welcomestyles.css 	new file:   CSS/01_basics/01_basics.md 	new file:   CSS/01_basics/index.html 	new file:   CSS/01_basics/style.css

--- a/BASICS/welcomestyles.css
+++ b/BASICS/welcomestyles.css
@@ -28,6 +28,9 @@ a{
 .heading {
     color : green;
     font-weight : light;
+    border-width : 2px;
+    border-color: aliceblue;
+    border-style: dashed;
 }
 
 #button1 {
@@ -38,4 +41,7 @@ a{
     text-align : center;
     font-family : 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: blue wavy underline;
+    border-width: 5px;
+    border-style: solid;
+    border-color: antiquewhite;
 }
