modified:   CSS/06_comingsoon/style.css

--- a/CSS/06_comingsoon/style.css
+++ b/CSS/06_comingsoon/style.css
@@ -13,7 +13,7 @@ html {
 
 .container {
     position: relative;
-    background: linear-gradient(135deg , #8a2be2 , #4169e1);
+    background: linear-gradient(135deg , #7224bb , #4169e1);
     display: flex;
     justify-content: center;
     align-items: center;
